add basic cost distribution api
